Rename the 'unloadproc' too.

--- a/tip/595.md
+++ b/tip/595.md
@@ -14,7 +14,8 @@ shared library with this name is called. No package handling is done,
 still the 3th argument of "load" is called "packageName".
 
 See also bug report [ea39ab591e](https://core.tcl-lang.org/tcl/info/ea39ab591e):
-<b>Tcl_StaticPackage allows case sensitvity; [load] prevents it</b>
+<b>Tcl_StaticPackage allows case sensitvity; [load] prevents it</b> which
+describes in better wordings what's wrong.
 
 This TIP proposes to get rid of the case-insensitivity of the "load"
 command, except in the guessing of the `prefix` from the filename.
@@ -24,15 +25,18 @@ of renamings will be done.
 
 # Specification
 
-In Tcl 8.7, rename `Tcl_StaticPackage` to `Tcl_StaticLibrary` and
-`Tcl_PackageInitProc` to `Tcl_LibraryInitProc`. Also add the
-following defines in `tcl.h`:
+In Tcl 8.7, rename `Tcl_StaticPackage` to `Tcl_StaticLibrary`,
+`Tcl_PackageInitProc` to `Tcl_LibraryInitProc` and `Tcl_PackageUnloadProc`
+to `Tcl_LibraryUnloadProc`. Also add the following defines in `tcl.h`:
 <pre>
     #define Tcl\_PackageInitProc Tcl\_LibraryInitProc
+    #define Tcl\_PackageUnloadProc Tcl\_LibraryUnloadProc
     #define Tcl\_StaticPackage Tcl\_StaticLibrary
 </pre>
 This way, the new names of the functions already can be used
-in Tcl 8.7, but the functionality stays the same.
+in Tcl 8.7, but the functionality stays the same. Hopefully
+those new names make it clear that those functions take
+part in the `load` mechanism, not the `package` mechanism.
 
 In Tcl 9.0, if the "load" command's 3th parameter is missing,
 this parameter is guessed from the filename. Starting with
@@ -42,16 +46,16 @@ The full algorith becomes:
   * If the filename starts with `lib`, strip it.
   * If the filename then starts with `tcl9`, strip it.
   * Take all (Unicode) alphabetical characters following
-    that, convert to (Unicode) camelcase.
+    that, convert to (Unicode) titlecase.
   * The result will be the guessed `prefix` parameter.
 
 This is almost the same as the Tcl 8.x algorithm, the
 enhancement is that all Unicode characters can be used
-in the filename. For example, a shared library `libtcl9π.so`
+in the filename. For example, a shared library `libπ.so`
 will result in a prefix `Π`, so the initialization function
 `Π_Init()` will be called.
 
-When using Tcl 9.0, 3 existing library names will be changed:
+When using Tcl 9.0, the following existing library names will be changed:
 
   * `tcldde14.dll` -> `tcl9dde14.dll`
   * `tclregistry13.dll` -> `tcl9registry13.dll`
@@ -68,12 +72,12 @@ with Tcl 9.0 headers)
 
 # Implementation
 
-Implementation is in Tcl branch bug-ea39ab591e
+Implementation is in Tcl (and Tk) branch bug-ea39ab591e.
 
 # Compatibility
 
 This is not compatible with Tcl 8.x, but there is a simple way to
-make all code compatible with both Tcl 8.7 and 9.0: Just replace
+make code compatible with both Tcl 8.7 and 9.0: Just replace
 all "load" invocations:
 
   * `load <fileName> <prefix>`
