--- a/tip/596.md
+++ b/tip/596.md
@@ -19,13 +19,13 @@ wrote [TIP #531](531.md) which also was inspired on the same problem.
 This TIP enhances Tcl 9.0 with no new API, but internal modifications,
 such that embedding Tcl in other applications using the Stub mechanism
 is finally possible without the described problems. It follows David
-Gravereaux' outline, providing new functions in the stub library
-(`libtcl9.0stub.a` / `tcl90stub.lib`) which is able to
-locate the Tcl 9.0 shared library (`libtcl9.0.so` / `tcl90.dll`),
-just assuming it is somewhere on the PATH. No new functions
-are added to the API, only existing functions which
+Gravereaux's outline, providing new wrapper functions in the stub library
+(`libtcl9.0stub.a` / `tcl90stub.lib`) which are able to
+locate, load and initialized the Tcl 9.0 shared library (`libtcl9.0.so`
+/ `tcl90.dll`), just assuming it is somewhere on the PATH. No new
+functions are added to the API, only existing functions which
 previously only worked for extensions are now made
-suitable to be used for embedders as well.
+suitable to be used for Embedding applications as well.
 
 # Specification
 
@@ -52,7 +52,7 @@ An example Embedding "Hello World" application:
 \#include &lt;tcl.h>
 \#include &lt;stdio.h>
 int main(int argc, char **argv) {
-    const char *version = Tcl_InitSubsystems(); /\* Load/Initialize the Tcl core \*/
+    const char \*version = Tcl_InitSubsystems(); /\* Load/Initialize the Tcl core \*/
     if (version == NULL) printf("Cannot find the Tcl core\\n");
     Tcl_Interp *interp = Tcl_CreateInterp();
     Tcl_Eval(interp, "puts stdout {Hello World}");
@@ -74,22 +74,16 @@ attached which needs to be mounted to be made available to the Tcl
 interpreter. Multiple such calls can be done, if desired: the first
 call will load the Tcl core, succeeding calls don't do that again.
 
-The signature of the 4 initialization functions is changed compared to
-8.x: All functions return a `const char *` now, which will return NULL if
-locating the Tcl core fails. The functions return the Tcl version numnber
-if the initialization succeeds. This can be used to check if the
-Tcl version is actually the expected one.
+The signature of the 4 initialization functions is changed: All
+functions return a `const char *` now, which will return NULL if
+locating the Tcl core fails. The functions return the full Tcl version
+numnber if the initialization succeeds. This can be used to check if
+the Tcl version is actually the expected one.
 
 Since Tcl 9.0 is the only version in development after 8.7, there is no
 mechanism yet to prefer Tcl 9.1 over 9.0, or make another selection
 on exactly which Tcl version is desired. That exercise is left for
 the future, when the development of Tcl 9.1 starts.
-
-In Tcl 8.7, `TclZipfs_AppHook()` always returns `TCL_OK`, it can never
-return anything else. In order to prevent confusion with the
-Tcl 9.0 of `TclZipfs_AppHook()`, the Tcl 8.7 version will be changed
-to return nothing (void). The example above won't compile/run with
-Tcl 8.x headers, it is only meant for Tcl 9.0.
 
 # Implementation
 
