Format fixes for "Hello World" example

--- a/tip/596.md
+++ b/tip/596.md
@@ -52,11 +52,11 @@ An example Embedding "Hello World" application:
 \#include &lt;tcl.h>
 \#include &lt;stdio.h>
 int main(int argc, char **argv) {
-    const char \*version = Tcl_InitSubsystems(); /\* Load/Initialize the Tcl core \*/
+    const char \*version = Tcl\_InitSubsystems(); /\* Load/Initialize the Tcl core \*/
     if (version == NULL) printf("Cannot find the Tcl core\\n");
-    Tcl_Interp *interp = Tcl_CreateInterp();
-    Tcl_Eval(interp, "puts stdout {Hello World}");
-    Tcl_DeleteInterp(interp);
+    Tcl\_Interp *interp = Tcl\_CreateInterp();
+    Tcl\_Eval(interp, "puts stdout {Hello World}");
+    Tcl\_DeleteInterp(interp);
     return 0;
 }
 </pre>
