Tweak text (thanks, Andreas!)

--- a/tip/575.md
+++ b/tip/575.md
@@ -9,9 +9,9 @@
 
 This TIP is a successor to [TIP #542](542.md), resolving a corner-case not realized at that moment.
 
-[TIP #542](542.md) allows stub-enabled extensions to be compiled with `-DTCL_UTF_MAX=4`, still
-working with Tcl compiled with `-DTCL_UTF_MAX=3`. All functions (e.g. `Tcl_UtfToUniChar`) which
-use a `Tcl_UniChar`, change behavior with the value of `TCL_UTF_MAX`: If `TCL_UTF_MAX=3`,
+[TIP #542](542.md) allows stub-enabled extensions to be compiled with `-DTCL_UTF_MAX=4`, while
+still working with a Tcl compiled with `-DTCL_UTF_MAX=3`. All functions (e.g. `Tcl_UtfToUniChar`)
+which use a `Tcl_UniChar`, change behavior with the value of `TCL_UTF_MAX`: If `TCL_UTF_MAX=3`,
 then, supplying a 4-byte UTF-8 character to this function will return 1, and `*chPtr` will
 point to a high surrogate. If `TCL_UTF_MAX=4`, then, this function will return 4, and `*chPtr`
 will point to the full Unicode character. This works by supplying two different stub entries
