--- a/tip/596.md
+++ b/tip/596.md
@@ -33,10 +33,10 @@ The following 4 functions are added to the Tcl Stub library. Their
 actual name in the stub library is different, in order to prevent
 symbol conflicts, but they function under the following names:
 
-	* `Tcl_InitSubsystems()`
-	* `Tcl_SetPanicProc()`
-	* `Tcl_FindExecutable()`
-	* `TclZipfs_AppHook()`
+* `Tcl_InitSubsystems()`
+* `Tcl_SetPanicProc()`
+* `Tcl_FindExecutable()`
+* `TclZipfs_AppHook()`
 
 Any application which wants to embed Tcl only needs to call one (or more) of
 those 4 functions first. If the application is compiled with `-DUSE_TCL_STUBS`,
@@ -79,6 +79,20 @@ functions return a `const char *` now, which will return NULL if
 locating the Tcl core fails. The functions return the full Tcl version
 numnber if the initialization succeeds. This can be used to check if
 the Tcl version is actually the expected one.
+
+There are 4 more functions exposed through the stub library this way,
+but which are _not_ capable of initializing the stub table. They
+can be called from the Embedder application after the Tcl core
+has already been loaded and initialized. These are:
+
+* `Tcl_MainEx()`/`Tcl_MainExW()` (in order to make `Tcl_Main()` function as-is)
+* `Tcl_StaticPackage()`
+* `Tcl_SetExitProc()`
+* `Tcl_GetMemoryInfo()`
+	
+They need special treatment because those functions are not exposed through
+the stub table. The only way to handle those is to search for the
+correct symbol in the Tcl shared library, and call it directly.
 
 Since Tcl 9.0 is the only version in development after 8.7, there is no
 mechanism yet to prefer Tcl 9.1 over 9.0, or make another selection
