Fix name of the stub library, fix demo C-code for error-situation

--- a/tip/596.md
+++ b/tip/596.md
@@ -20,10 +20,10 @@ This TIP enhances Tcl 9.0 with no new API, but internal modifications,
 such that embedding Tcl in other applications using the Stub mechanism
 is finally possible without the described problems. It follows David
 Gravereaux's outline, providing new wrapper functions in the stub library
-(`libtcl9.0stub.a` / `tcl90stub.lib`) which are able to
+(`libtclstub9.0.a` / `tclstub90.lib`) which are able to
 locate, load and initialized the Tcl 9.0 shared library (`libtcl9.0.so`
-/ `tcl90.dll`), just assuming it is somewhere on the PATH. No new
-functions are added to the API, only existing functions which
+/ `tcl90.dll`), just assuming it is somewhere on the PATH or in &lt;prefix>/lib.
+No new functions are added to the API, only existing functions which
 previously only worked for extensions are now made
 suitable to be used for Embedding applications as well.
 
@@ -33,10 +33,10 @@ The following 4 functions are added to the Tcl Stub library. Their
 actual name in the stub library is different, in order to prevent
 symbol conflicts, but they function under the following names:
 
-* `Tcl_InitSubsystems()`
-* `Tcl_SetPanicProc()`
-* `Tcl_FindExecutable()`
-* `TclZipfs_AppHook()`
+* `const char *Tcl_InitSubsystems(...)`
+* `const char *Tcl_SetPanicProc(...)`
+* `const char *Tcl_FindExecutable(...)`
+* `const char *TclZipfs_AppHook(...)`
 
 Any application which wants to embed Tcl only needs to call one (or more) of
 those 4 functions first. If the application is compiled with `-DUSE_TCL_STUBS`,
@@ -53,7 +53,7 @@ An example Embedding "Hello World" application:
 \#include &lt;stdio.h>
 int main(int argc, char **argv) {
     const char \*version = Tcl\_InitSubsystems(); /\* Load/Initialize the Tcl core \*/
-    if (version == NULL) printf("Cannot find the Tcl core\\n");
+    if (version == NULL) {printf("Cannot find the Tcl core\\n"); return 1;}
     Tcl\_Interp *interp = Tcl\_CreateInterp();
     Tcl\_Eval(interp, "puts stdout {Hello World}");
     Tcl\_DeleteInterp(interp);
