--- a/tip/595.md
+++ b/tip/595.md
@@ -77,7 +77,7 @@ Implementation is in Tcl (and Tk) branch bug-ea39ab591e.
 # Compatibility
 
 This is not compatible with Tcl 8.x, but there is a simple way to
-make code compatible with both Tcl 8.7 and 9.0: Just replace
+make code compatible with both Tcl 8.x and 9.0: Just replace
 all "load" invocations:
 
   * `load <fileName> <prefix>`
