--- a/tip/596.md
+++ b/tip/596.md
@@ -74,10 +74,10 @@ attached which needs to be mounted to be made available to the Tcl
 interpreter. Multiple such calls can be done, if desired: the first
 call will load the Tcl core, succeeding calls don't do that again.
 
-The signature of the 4 initialization functions is changed: All
+The signatures of the 4 initialization functions change: All
 functions return a `const char *` now, which will return NULL if
 locating the Tcl core fails. The functions return the full Tcl version
-numnber if the initialization succeeds. This can be used to check if
+number if the initialization succeeds. This can be used to check if
 the Tcl version is actually the expected one.
 
 There are 4 more functions exposed through the stub library this way,
@@ -105,7 +105,7 @@ Implementation is in Tcl branch rfe-854941.
 
 # Compatibility
 
-This 100% upwards compatible with Tcl 8.6.
+This is 100% upwards compatible with Tcl 8.6.
 
 # Copyright
 
