TIP 529 is accepted

--- a/tip/529.md
+++ b/tip/529.md
@@ -1,8 +1,12 @@
 # TIP 529: Add metadata dictionary property to tk photo image
     Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-    State:          Draft
+    State:          Final
     Type:           Project
-    Vote:           In progress
+    Vote:           Done
+    Vote-Summary:   Accepted 7/0/1
+    Votes-For:      AK, FV, JD, JN, KW, MC, SL 
+    Votes-Against:  None
+    Votes-Present:  KK
     Created:        07-Dec-2018
     Keywords:       Tk, image
     Tcl-Version:    8.7
