--- a/tip/575.md
+++ b/tip/575.md
@@ -2,6 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-575
 -----
