--- a/tip/600.md
+++ b/tip/600.md
@@ -218,9 +218,9 @@ has the following function to convert a Tcl string to json form:
 &#35; Convert TCL string to proper JSON string
 proc jString {str} {
 	set result ""
-	# json::write does escaping for 8-bit characters and adds quotes, but doesn't handle unicode
+	&#35; json::write does escaping for 8-bit characters and adds quotes, but doesn't handle unicode
 	set str [json::write string [subst -nocommands -novariables $str]]
-	# Convert everything non 8-bit to \\uXXXX sequences
+	&#35; Convert everything non 8-bit to \\uXXXX sequences
 	foreach char [split $str {}] {
 		scan $char %c code
 		if {$code > 127} {
@@ -241,17 +241,17 @@ be converted to surrogate-pairs first). Starting with Tcl 8.6.11 it should (fina
 &#35; Convert TCL string to proper JSON string
 proc jString {str} {
 	set result ""
-	# json::write does escaping for 8-bit characters and adds quotes, but doesn't handle unicode
+	&#35; json::write does escaping for 8-bit characters and adds quotes, but doesn't handle unicode
 	set str [json::write string [subst -nocommands -novariables $str]]
-	# Convert everything non 8-bit to \\uXXXX sequences
+	&#35; Convert everything non 8-bit to \uXXXX sequences
 	foreach char [split $str {}] {
 		scan $char %c code
 		if {$code > 65535} {
-			# split $code into surrogates first
-			append result [format "\\\\u%04.4x\\\\u%04.4x" \
+			&#35; split $code into surrogates first
+			append result [format "\\u%04.4x\\u%04.4x" \
 				[expr {(($code-0x10000)>>10)+0xD800}] [expr {(($code-0x10000)&0x3FF)+0xDC00}]]
 		} elif {$code > 127} {
-			append result [format "\\\\u%04.4x" $code]
+			append result [format "\\u%04.4x" $code]
 		} else {
 			append result $char
 		}
