TIP #575 voting done

--- a/tip/575.md
+++ b/tip/575.md
@@ -1,10 +1,14 @@
 # TIP 575: Switchable Tcl\_UtfCharComplete()/Tcl\_UtfNext()/Tcl\_UtfPrev()
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-575
+	Vote-Summary:	Accepted 3/0/0
+	Votes-For:	JN, KW, SL
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 # Abstract
 
