Add WTF-16 to TIP #597

--- a/tip/597.md
+++ b/tip/597.md
@@ -1,4 +1,4 @@
-# TIP 597: "string is unicode" and new wtf-8 encoding
+# TIP 597: "string is unicode" and new wtf-8/wtf-16 encodings
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -11,16 +11,14 @@ Currently, there is a discussion going on, about making Tcl more
 conform to the Unicode specification. Internally, Tcl allows
 to use Unicode codepoints which are not allowed to be exported
 to other applications, which makes Tcl non-conformant.
-[TIP #574](https://core.tcl-lang.org/tips/doc/trunk/tip/573.md)
-makes an attempt to solve this by forbidding the use of surrogates.
-This is not the complete set of disallowed characters, but it's
-a start.
+[TIP #573](https://core.tcl-lang.org/tips/doc/trunk/tip/573.md)
+was an attempt to solve this by forbidding the use of surrogates.
 
-This TIP attempts another approach. We can allow all characters
-internally, but modify the "utf-8" encoder such that any surrogate
+This TIP provides another approach. We can allow all characters
+internally, but modify the "utf-8"/"utf-16" encoders such that any surrogate
 or noncharacter (as defined by the Unicode standard) is replaced
-by the replacement character U+FFFD. The current "utf-8"
-encoding is renamed to "wtf-8". See [WTF-8](https://simonsapin.github.io/wtf-8/)
+by the replacement character U+FFFD. The current "utf-8"/"utf-16"
+encodings are renamed to "wtf-8"/"wtf-16". See [WTF-8](https://simonsapin.github.io/wtf-8/)
 
 # Specification
 
@@ -31,7 +29,7 @@ Introduce a new command
 This command will return 0 if the string contains at least
 one character from the following set, 1 otherwise:
 
-* Surrogates (U+D800 - U+DFFF)
+* surrogates (U+D800 - U+DFFF)
 * noncharacters (U+??FFFE - U+??FFFF and U+FDD0 - U+FDEF)
 
 Contrary to other `string is` commands, which adapt to the
@@ -41,20 +39,50 @@ check if a Unicode character is defined for a code point in the
 current Unicode standard. If the codepoint is available for a
 possible future assignment, `string is unicode` will return 1.
 
+The `string is unicode` command can be used to check if the
+"utf-8"/"utf-16" encodings would deliver valid output, e.g.
+<pre>
+if {[string is unicode $text]} {
+    set f [open somefile.txt]
+    fconfigure $f -encoding binary
+    puts $f [encoding convertto utf-16 $text]
+} else {
+    puts stderr "Cannot write to file: invalid utf-16"
+}
+</pre>
+The `encoding converto` command currently has no other way
+to indicate encoding errors.
+
+The problem with surrogates is that in the UTF-16 encoding there
+is no way to distinguish a surrogate-pair from a character > U+FFFF.
+Therefore the surrogate code-points (U+D800 - U+DFFF) are not
+allowed in UTF-8. When other applications receive such invalid
+UTF-8, behavior is undefined.
+
+For a similar reason, noncharacters are problematic in UTF-16. Since
+U+FEFF is the BOM (Byte order Mark), allowing U+FFFE as possible value
+means we can no longer distinguish little-endian UTF-16 files from
+big-endian. And the U+FFFF pattern (short -1) is used very often in
+binary files, so allowing U+FFFF in UTF-16 makes it more difficult to
+distinguish binary files from UTF-16 text (the NULL-byte cannot be used
+for that, because it is allowed - and frequent - in UTF-16).
+That's why the last two characters in each plane (U+??FFFE - U+??FFFF)
+are defined as unicode "noncharacters".
+
 Introduce a new API:
 
 * `int Tcl_UniCharIsUnicode(int character)`
 
-This function returns 1 if `character` is between U+0000 and
-U+10FFFE, and it is not a surrogate or a noncharacter.
+This function returns 1 if `character` is between 0x0000 and
+0x10FFFE, and it is not a surrogate or a noncharacter.
 
-Introduce a new "utf-8" encoding, and rename the current "utf-8"
-encoding to "wtf-8". When converting from internal utf-8 to
-external utf-8, any character for which `string is unicode`
-returns 0 will be replaced by the replacement character U+FFFD.
-When converting from external utf-8 to internal utf-8, nothing
-changes: The new utf-8 decoder is forgiving for surrogates
-and noncharacters, they can continue to be processed by Tcl as-is.
+Introduce new "utf-8"/"utf-16" encodings, and rename the current
+"utf-8"/"utf-16" encodings to "wtf-8"/"wtf-16". When converting from
+internal utf-8 to external utf-8/utf-16, any character for which
+`string is unicode` returns 0 will be replaced by the replacement
+character U+FFFD. When converting from external utf-8/utf16 to internal
+utf-8, nothing changes: The new utf-8/utf-16 decoders are forgiving for
+surrogates and noncharacters, they can continue to be processed by Tcl as-is.
 
 # Implementation
 
@@ -62,12 +90,13 @@ Implementation is in Tcl branch tip-597
 
 # Compatibility
 
-Since Tcl 8.6's "utf-8" encoder can produce invalid utf-8, and
-the new "utf-8" encoder cannot any more, this introduces a
+Since Tcl 8.6's "utf-8"/"utf-16" encoders can produce invalid utf-8/utf-16,
+and the new "utf-8"/"utf-16" encoders cannot any more, this introduces a
 **potential incompatibility** for applications which - illegally -
-export invalid utf-8. Applications which - willingly - want to
-violate the Unicode standard need to start using the "wtf-8"
-encoder in stead. The "utf-8" decoder is unchanged.
+export invalid utf-8/utf-16. Applications which - willingly - want to
+violate the Unicode standard need to start using the "wtf-8"/"wtf-16"
+encoders in stead. The "utf-8"/"utf-16" decoders are unchanged, so
+Tcl can continue to receive invalid utf-8/utf-16 from other applications.
 
 # Copyright
 
