Describe Tcl 8.7 with -DTCL_UTF_MAX=4

--- a/tip/600.md
+++ b/tip/600.md
@@ -30,13 +30,19 @@ differs in the various Tcl versions:
 The difference in behavior, comparing the different Tcl versions, can be explained by this
 difference in internal representation of strings.
 
-Remark: Actually, Tcl uses a variation of UTF-8/CESU-8/WTF-8 in which the NULL character is represented as two bytes 0xC0 0x80.
+Remark: Actually, Tcl uses a variation of [UTF-8](https://en.wikipedia.org/wiki/UTF-8)/[CESU-8](https://en.wikipedia.org/wiki/CESU-8)/[WTF-8](https://simonsapin.github.io/wtf-8/)
+in which the NULL character is represented as two bytes `0xC0 0x80`.
 This variation is known as [Modified UTF-8](https://en.wikipedia.org/wiki/UTF-8#Modified_UTF-8). Tcl uses the same
-modification for CESU-8 and WTF-8 as well. Since this modification holds for all Tcl versions, it's not significant
-for this document.
+modification for [CESU-8](https://en.wikipedia.org/wiki/CESU-8) and [WTF-8](https://simonsapin.github.io/wtf-8/) as well.
+Since this modification holds for all Tcl versions, it's not further handled in this document.
 
 Remark 2:  Since utf-8 is the system encoding on most modern UNIX (and MacOS) systems, the examples below can only
 be used on UNIX and MacOS, not when using tclsh interactive on Windows (for example).
+
+Remark 3:  There is one more supported configuration: compiling Tcl 8.7 using `-DTCL_UTF_MAX=4`. This changes the internal
+"Unicode string" representation from [UTF-16](https://en.wikipedia.org/wiki/UTF-16) to [UTF-32](https://en.wikipedia.org/wiki/UTF-32).
+Therefore this is not handled as a separate case: The "unicode"-releated behavior of this configuration is like "tclsh9.0" in
+the further part of this document.
 
 # encoding "utf-8"
 
