Clearify algorithm for determining the "prefix"

--- a/tip/595.md
+++ b/tip/595.md
@@ -40,20 +40,20 @@ part in the `load` mechanism, not the `package` mechanism.
 
 In Tcl 9.0, if the "load" command's 3th parameter is missing,
 this parameter is guessed from the filename. Starting with
-Tcl 9.0, a Unicode TitleCase will be used, not a ASCII one.
-The full algorith becomes:
+Tcl 9.0, a Unicode Titlecase will be used, not a ASCII one.
+The full algorithm becomes:
 
   * If the filename starts with `lib`, strip it.
   * If the filename then starts with `tcl9`, strip it.
-  * Take all (Unicode) alphabetical characters following
-    that, convert to (Unicode) titlecase.
+  * Take the characters following that, up to (but not including) the
+    first character which is a (Unicode) digit or not a (Unicode) word.
+  * Convert those characters to (Unicode) Titlecase.
   * The result will be the guessed `prefix` parameter.
 
-This is almost the same as the Tcl 8.x algorithm, the
-enhancement is that all Unicode characters can be used
-in the filename. For example, a shared library `libπ.so`
-will result in a prefix `Π`, so the initialization function
-`Π_Init()` will be called.
+This is almost the same as the Tcl 8.x algorithm, the enhancement is that
+the characters used in the filename are no longer limited to ASCII. For
+example, a shared library `libπ.so` will result in a prefix `Π`, so the
+initialization function `Π_Init()` will be called when loading this file.
 
 When using Tcl 9.0, the following existing library names will be changed:
 
