Two TIP's "Voting in progress"

--- a/tip/595.md
+++ b/tip/595.md
@@ -2,6 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Tcl-Version:    9.0
 	Tcl-Branch:     bug-ea39ab591e
 -----
