--- a/tip/598.md
+++ b/tip/598.md
@@ -2,6 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Tcl-Version:    8.7
 	Tcl-Branch:     rfe-800716
 -----
@@ -9,7 +10,7 @@
 
 This TIP proposes to export the current win32-specific
 functions `TclWinConvertError()` and `TclWinConvertWSAError()`
-under the new name `TclWinConvertError()`.
+under the new name `Tcl_WinConvertError()`.
 
 # Specification
 
