Capitalise some titles

--- a/tip/594.md
+++ b/tip/594.md
@@ -1,4 +1,4 @@
-# TIP 594: modernize "file stat" interface
+# TIP 594: Modernize "file stat" interface
 	Author:         Emiliano Gavilán <emilianogavilan@gmail.com>
 	Author:         aspect <tcler@abstracted-spleen.org>
 	State:          Draft
