--- a/tip/599.md
+++ b/tip/599.md
@@ -1,4 +1,4 @@
-# TIP 599: extended build information
+# TIP 599: Extended build information
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
