Add CESU-8 encoder to TIP #597

--- a/tip/597.md
+++ b/tip/597.md
@@ -1,4 +1,4 @@
-# TIP 597: "string is unicode" and new wtf-8/wtf-16 encodings
+# TIP 597: "string is unicode" and new wtf-8/wtf-16/cesu-8 encodings
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -83,6 +83,10 @@ internal utf-8 to external utf-8/utf-16, any character for which
 character U+FFFD. When converting from external utf-8/utf16 to internal
 utf-8, nothing changes: The new utf-8/utf-16 decoders are forgiving for
 surrogates and noncharacters, they can continue to be processed by Tcl as-is.
+
+Introduce a new "cesu-8" encoding. It's the same as "wtf-8", only
+characters > U+FFFF will be output as a 6-byte sequence in stead of
+a 4-byte sequence. See: [WTF-8](https://en.wikipedia.org/wiki/CESU-8)
 
 # Implementation
 
