Describe the TCL_ENCODING_STOPONERROR flag. Don't use 'invalid', since 'non-conformant' is more clear.

--- a/tip/597.md
+++ b/tip/597.md
@@ -26,11 +26,11 @@ Introduce a new command
 
 * `string is unicode`
 
-This command will return 0 if the string contains at least
-one character from the following set, 1 otherwise:
+This command will return 1 if the string does not contain
+any character from the following set:
 
-* surrogates (U+D800 - U+DFFF)
-* noncharacters (U+??FFFE - U+??FFFF and U+FDD0 - U+FDEF)
+* 2048 surrogates (U+D800 - U+DFFF)
+* 66 noncharacters (U+??FFFE - U+??FFFF and U+FDD0 - U+FDEF)
 
 Contrary to other `string is` commands, which adapt to the
 evolving Unicode standard, `string is unicode` will not
@@ -47,7 +47,7 @@ if {[string is unicode $text]} {
     fconfigure $f -encoding binary
     puts $f [encoding convertto utf-16 $text]
 } else {
-    puts stderr "Cannot write to file: invalid utf-16"
+    puts stderr "Cannot write to file: non-conformant utf-16"
 }
 </pre>
 The `encoding converto` command currently has no other way
@@ -56,7 +56,7 @@ to indicate encoding errors.
 The problem with surrogates is that in the UTF-16 encoding there
 is no way to distinguish a surrogate-pair from a character > U+FFFF.
 Therefore the surrogate code-points (U+D800 - U+DFFF) are not
-allowed in UTF-8. When other applications receive such invalid
+allowed in UTF-8. When other applications receive such non-conformant
 UTF-8, behavior is undefined.
 
 For a similar reason, noncharacters are problematic in UTF-16. Since
@@ -74,19 +74,36 @@ Introduce a new API:
 * `int Tcl_UniCharIsUnicode(int character)`
 
 This function returns 1 if `character` is between 0x0000 and
-0x10FFFE, and it is not a surrogate or a noncharacter.
+0x10FFFE, and it is not a surrogate and not a noncharacter.
 
 Introduce new "utf-8"/"utf-16" encodings, and rename the current
 "utf-8"/"utf-16" encodings to "wtf-8"/"wtf-16". When converting from
 internal utf-8 to external utf-8/utf-16, any character for which
-`string is unicode` returns 0 will be replaced by the replacement
-character U+FFFD. When converting from external utf-8/utf16 to internal
-utf-8, nothing changes: The new utf-8/utf-16 decoders are forgiving for
-surrogates and noncharacters, they can continue to be processed by Tcl as-is.
+`string is unicode` returns 0 will be produce the replacement
+character U+FFFD (bytes \exEF \exBF \exBD). When converting from
+external utf-8/utf16 to internal utf-8, nothing changes: The new
+utf-8/utf-16 decoders are forgiving for surrogates and noncharacters,
+they can continue to be processed by Tcl as-is.
 
 Introduce a new "cesu-8" encoding. It's the same as "wtf-8", only
 characters > U+FFFF will be output as a 6-byte sequence in stead of
 a 4-byte sequence. See: [WTF-8](https://en.wikipedia.org/wiki/CESU-8)
+
+The new encoders all implement the flag TCL_ENCODING_STOPONERROR
+(which is not accessible at script level). When this flag is set,
+the encoder/decoder will stop processing when it encounters a
+surrogate or noncharacter or some other problem (e.g. overlong
+byte sequences or missing continuation bytes)
+
+# Further enhancements
+
+At this moment, Tcl doesn't have access to the TCL_ENCODING_STOPONERROR
+flag at script level. Work is ongoing (in the "encodings-with-flags"
+branch) to change that. This can be used to let the "utf-8" encoder
+automatically stop processing when it encounters a surrogate or
+noncharacter, in stead of producing \exEF \exBF \exBD (as proposed in this TIP).
+Since this change brings more complications, it is left out of
+scope for this TIP. But it would (IMHO) be a very useful addition.
 
 # Implementation
 
@@ -94,13 +111,13 @@ Implementation is in Tcl branch tip-597
 
 # Compatibility
 
-Since Tcl 8.6's "utf-8"/"utf-16" encoders can produce invalid utf-8/utf-16,
+Since Tcl 8.6's "utf-8"/"utf-16" encoders can produce non-conformant utf-8/utf-16,
 and the new "utf-8"/"utf-16" encoders cannot any more, this introduces a
 **potential incompatibility** for applications which - illegally -
-export invalid utf-8/utf-16. Applications which - willingly - want to
+export non-conformant utf-8/utf-16. Applications which - willingly - want to
 violate the Unicode standard need to start using the "wtf-8"/"wtf-16"
 encoders in stead. The "utf-8"/"utf-16" decoders are unchanged, so
-Tcl can continue to receive invalid utf-8/utf-16 from other applications.
+Tcl can continue to receive non-conformant utf-8/utf-16 from other applications.
 
 # Copyright
 
