Tcl_StaticPackage -> Tcl_StaticLibrary in TIP #596

--- a/tip/596.md
+++ b/tip/596.md
@@ -86,7 +86,7 @@ can be called from the Embedder application after the Tcl core
 has already been loaded and initialized. These are:
 
 * `Tcl_MainEx()`/`Tcl_MainExW()` (in order to make `Tcl_Main()` function as-is)
-* `Tcl_StaticPackage()`
+* `Tcl_StaticLibrary()`
 * `Tcl_SetExitProc()`
 * `Tcl_GetMemoryInfo()`
 	
