Add Tcl_SetPreInitScript() to TIP #596

--- a/tip/596.md
+++ b/tip/596.md
@@ -27,6 +27,10 @@ No new functions are added to the API, only existing functions which
 previously only worked for extensions are now made
 suitable to be used for Embedding applications as well.
 
+Tcl 8.7 is enhanced with new API: the function `Tcl_SetPreInitScript()`,
+which is nothing more than the renamed internal function `TclSetPreInitScript()`
+I will not be exposed through the stub table.
+ 
 # Specification
 
 The following 4 functions are added to the Tcl Stub library. Their
@@ -80,7 +84,7 @@ locating the Tcl core fails. The functions return the full Tcl version
 number if the initialization succeeds. This can be used to check if
 the Tcl version is actually the expected one.
 
-There are 4 more functions exposed through the stub library this way,
+There are 5 more functions exposed through the stub library this way,
 but which are _not_ capable of initializing the stub table. They
 can be called from the Embedder application after the Tcl core
 has already been loaded and initialized. These are:
@@ -89,6 +93,7 @@ has already been loaded and initialized. These are:
 * `Tcl_StaticLibrary()`
 * `Tcl_SetExitProc()`
 * `Tcl_GetMemoryInfo()`
+* `Tcl_SetPreInitScript()`
 	
 They need special treatment because those functions are not exposed through
 the stub table. The only way to handle those is to search for the
