formatting/textual tweaks

--- a/tip/597.md
+++ b/tip/597.md
@@ -80,14 +80,14 @@ Introduce new "utf-8"/"utf-16" encodings, and rename the current
 "utf-8"/"utf-16" encodings to "wtf-8"/"wtf-16". When converting from
 internal utf-8 to external utf-8/utf-16, any character for which
 `string is unicode` returns 0 will be produce the replacement
-character U+FFFD (bytes \exEF \exBF \exBD). When converting from
+character U+FFFD (bytes \\xEF \\xBF \\xBD). When converting from
 external utf-8/utf16 to internal utf-8, nothing changes: The new
 utf-8/utf-16 decoders are forgiving for surrogates and noncharacters,
 they can continue to be processed by Tcl as-is.
 
 Introduce a new "cesu-8" encoding. It's the same as "wtf-8", only
 characters > U+FFFF will be output as a 6-byte sequence in stead of
-a 4-byte sequence. See: [WTF-8](https://en.wikipedia.org/wiki/CESU-8)
+a 4-byte sequence. See: [CESU-8](https://en.wikipedia.org/wiki/CESU-8)
 
 The new encoders all implement the flag TCL_ENCODING_STOPONERROR
 (which is not accessible at script level). When this flag is set,
@@ -101,7 +101,7 @@ At this moment, Tcl doesn't have access to the TCL_ENCODING_STOPONERROR
 flag at script level. Work is ongoing (in the "encodings-with-flags"
 branch) to change that. This can be used to let the "utf-8" encoder
 automatically stop processing when it encounters a surrogate or
-noncharacter, in stead of producing \exEF \exBF \exBD (as proposed in this TIP).
+noncharacter, in stead of producing \\xEF \\xBF \\xBD (as proposed in this TIP).
 Since this change brings more complications, it is left out of
 scope for this TIP. But it would (IMHO) be a very useful addition.
 
