Record vote results for TIP #595 and #598

--- a/tip/598.md
+++ b/tip/598.md
@@ -1,10 +1,14 @@
 # TIP 598: export TclWinConvertError
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Tcl-Version:    8.7
 	Tcl-Branch:     rfe-800716
+	Vote-Summary:	Accepted 3/0/5
+	Votes-For:	JN, KW, KK
+	Votes-Against:	none
+	Votes-Present:	AK, DP, FV, MC, SL
 -----
 # Abstract
 
