--- a/tip/595.md
+++ b/tip/595.md
@@ -1,10 +1,14 @@
 # TIP 595: Unicode-aware/case-sensitive Loadable Library handling
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Tcl-Version:    9.0
 	Tcl-Branch:     bug-ea39ab591e
+	Vote-Summary:	Accepted 7/0/1
+	Votes-For:	AK, DP, JN, KW, KK, MC, SL
+	Votes-Against:	none
+	Votes-Present:	FV
 -----
 # Abstract
 
