Add "tcl-8" encoding and deprecate "string bytelength"

--- a/tip/597.md
+++ b/tip/597.md
@@ -17,8 +17,14 @@ was an attempt to solve this by forbidding the use of surrogates.
 This TIP provides another approach. We can allow all characters
 internally, but modify the "utf-8"/"utf-16" encoders such that any surrogate
 or noncharacter (as defined by the Unicode standard) is replaced
-by the replacement character U+FFFD. The current "utf-8"/"utf-16"
-encodings are renamed to "wtf-8"/"wtf-16". See [WTF-8](https://simonsapin.github.io/wtf-8/)
+by the replacement character U+FFFD.
+
+Further on, there are new "wtf-8"/"wtf-16"/"cesu-8" and "tcl-8"
+encodings.
+
+Finally "string bytelength" will be deprecated in Tcl 8.7 and
+fully removed in Tcl 9.0. The new encodings can be used to
+create a good replacement for this command.
 
 # Specification
 
@@ -76,8 +82,7 @@ Introduce a new API:
 This function returns 1 if `character` is between 0x0000 and
 0x10FFFE, and it is not a surrogate and not a noncharacter.
 
-Introduce new "utf-8"/"utf-16" encodings, and rename the current
-"utf-8"/"utf-16" encodings to "wtf-8"/"wtf-16". When converting from
+Introduce new "utf-8"/"utf-16" encodings. When converting from
 internal utf-8 to external utf-8/utf-16, any character for which
 `string is unicode` returns 0 will be produce the replacement
 character U+FFFD (bytes \\xEF \\xBF \\xBD). When converting from
@@ -85,15 +90,37 @@ external utf-8/utf16 to internal utf-8, nothing changes: The new
 utf-8/utf-16 decoders are forgiving for surrogates and noncharacters,
 they can continue to be processed by Tcl as-is.
 
+Introduce new "wtf-8"/"wtf-16" encodings. See [WTF-8](https://simonsapin.github.io/wtf-8/).
+The "wtf-8" encoding is almost the same as "utf-8", only it does not
+forbid the codepoints U+D800-U+DFFF. It only forbids sequences in which
+an upper surrogate is immediately followed by a lower surrogate: such
+sequence should be encoded as a single 4-byte sequence.
+Tcl tries to enforce that, but - at this moment - doesn't succeed
+for 100% in doing that. That's a [bug](https://core.tcl-lang.org/tcl/tktview?name=7f1162a867).
+
 Introduce a new "cesu-8" encoding. It's the same as "wtf-8", only
 characters > U+FFFF will be output as a 6-byte sequence in stead of
 a 4-byte sequence. See: [CESU-8](https://en.wikipedia.org/wiki/CESU-8)
+
+Finally introduce a new "tcl-8" encoding. This encoding handles the
+Tcl internal byte format. It's the same as "wtf-8", only the NULL
+byte is encoded as \\xC0 \\x80 in stead of \\x00. The "tcl-8"
+encoding can also be used as a replacement for the "identity" encoding.
+Contrary to "identity" it will correct (or detect, in case of
+TCL_ENCODING_STOPONERROR) invalid byte sequences.
 
 The new encoders all implement the flag TCL_ENCODING_STOPONERROR
 (which is not accessible at script level). When this flag is set,
 the encoder/decoder will stop processing when it encounters a
 surrogate or noncharacter or some other problem (e.g. overlong
 byte sequences or missing continuation bytes)
+
+Finally, deprecate the "string bytelength" command. It can be
+replaced by "string length [encoding convertto wtf-8]" or
+"string length [encoding convertto tcl-8]": which one to
+choose depends on whether you want to count the NULL byte
+as 1 ("wtf-8") or as 2 ("tcl-8"). In Tcl 9, the
+"string bytelength" command will be removed fully.
 
 # Further enhancements
 
@@ -115,7 +142,7 @@ Since Tcl 8.6's "utf-8"/"utf-16" encoders can produce non-conformant utf-8/utf-1
 and the new "utf-8"/"utf-16" encoders cannot any more, this introduces a
 **potential incompatibility** for applications which - illegally -
 export non-conformant utf-8/utf-16. Applications which - willingly - want to
-violate the Unicode standard need to start using the "wtf-8"/"wtf-16"
+violate the Unicode standard need to start using the "wtf-8"/"wtf-16"/"tcl-8"
 encoders in stead. The "utf-8"/"utf-16" decoders are unchanged, so
 Tcl can continue to receive non-conformant utf-8/utf-16 from other applications.
 
