The "bug" is fixed now, so don't mention it any more.

--- a/tip/597.md
+++ b/tip/597.md
@@ -93,10 +93,8 @@ they can continue to be processed by Tcl as-is.
 Introduce new "wtf-8"/"wtf-16" encodings. See [WTF-8](https://simonsapin.github.io/wtf-8/).
 The "wtf-8" encoding is almost the same as "utf-8", only it does not
 forbid the codepoints U+D800-U+DFFF. It only forbids sequences in which
-an upper surrogate is immediately followed by a lower surrogate: such
-sequence should be encoded as a single 4-byte sequence.
-Tcl tries to enforce that, but - at this moment - doesn't succeed
-for 100% in doing that. That's a [bug](https://core.tcl-lang.org/tcl/tktview?name=7f1162a867).
+an upper surrogate is immediately followed by a lower surrogate as two 3-byte
+sequences: such sequence are encoded as a single 4-byte sequence.
 
 Introduce a new "cesu-8" encoding. It's the same as "wtf-8", only
 characters > U+FFFF will be output as a 6-byte sequence in stead of
@@ -120,7 +118,7 @@ replaced by "string length [encoding convertto wtf-8]" or
 "string length [encoding convertto tcl-8]": which one to
 choose depends on whether you want to count the NULL byte
 as 1 ("wtf-8") or as 2 ("tcl-8"). In Tcl 9, the
-"string bytelength" command will be removed fully.
+"string bytelength" command will be removed.
 
 # Further enhancements
 
