TIP596: it targets TCL9.0 so mentioning 8.7 was probably a typo.

--- a/tip/596.md
+++ b/tip/596.md
@@ -27,9 +27,9 @@ No new functions are added to the API, only existing functions which
 previously only worked for extensions are now made
 suitable to be used for Embedding applications as well.
 
-Tcl 8.7 is enhanced with new API: the function `Tcl_SetPreInitScript()`,
-which is nothing more than the renamed internal function `TclSetPreInitScript()`
-I will not be exposed through the stub table.
+Tcl 9.0 is enhanced with a new API: the function `Tcl_SetPreInitScript()`,
+which is nothing more than the renamed internal function `TclSetPreInitScript()`.
+It will not be exposed through the stub table.
  
 # Specification
 
